fixed image refresh problem in the book reading section